force-app/main/default/objects/Case_Transfer_Routing__c/Case_Transfer_Routing__c.object-meta.xml
<CustomObject>
    <description>When transferring a Case, gives the destination options.</description>
    <label>Case Transfer Routing</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Case Transfer Routing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Transfer Routings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>