force-app/main/default/objects/Case_Transfer_Routing__c/fields/Allow_Active_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Allow_Active_Assignment_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Active Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>