force-app/main/default/objects/Case_Transfer_Routing__c/fields/Allow_Transfer_to_User__c.field-meta.xml
<CustomField>
    <fullName>Allow_Transfer_to_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do we allow this record to be transferred to a User instead of the Queue?</description>
    <inlineHelpText>Do we allow this record to be transferred to a User instead of the Queue?</inlineHelpText>
    <label>Allow Transfer to User</label>
    <type>Checkbox</type>
</CustomField>