force-app/main/default/objects/Case_Transfer_Routing__c/fields/Case_Lookup_field_name__c.field-meta.xml
<CustomField>
    <fullName>Case_Lookup_field_name__c</fullName>
    <description>The API name of the case look up field on the reference object</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The API name of the case lookup field on reference object</inlineHelpText>
    <label>Case Lookup field name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>