force-app/main/default/objects/Case_Transfer_Routing__c/fields/Default_User_Transferred_to__c.field-meta.xml
<CustomField>
    <fullName>Default_User_Transferred_to__c</fullName>
    <description>If this field is set then the User Assigned to the case will be defaulted to the record specified. This will be the API name of the object. Initially this will contain Safety_Rep__c.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If this field is set then the User assigned to the case will be defaulted to the record specified.</inlineHelpText>
    <label>Default User Transferred to</label>
    <length>80</length>
    <type>Text</type>
</CustomField>