force-app/main/default/objects/Case_Transfer_Routing__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>The department to which we are transferring.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The department to which we are transferring.</inlineHelpText>
    <label>Department</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>