force-app/main/default/objects/Case_Transfer_Routing__c/fields/Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Set_Name__c</fullName>
    <description>The name of the field set to be used on the page (if any).</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the field set to be used on the page (if any).</inlineHelpText>
    <label>Field Set Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>