force-app/main/default/objects/Case_Transfer_Routing__c/fields/From_Profiles__c.field-meta.xml
<CustomField>
    <fullName>From_Profiles__c</fullName>
    <description>If this routing is only for specific profiles, add the names here (separated by semi-colons).</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If this routing is only for specific profiles, add the names here (separated by semi-colons).</inlineHelpText>
    <label>From Profiles</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>