force-app/main/default/objects/Case_Transfer_Routing__c/fields/From_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Record_Type_Name__c</fullName>
    <description>The name of the record type of the orginal case.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the record type of the orginal case.</inlineHelpText>
    <label>From Record Type Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>