force-app/main/default/objects/Case_Transfer_Routing__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this routing active?</description>
    <inlineHelpText>Is this routing active?</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>