force-app/main/default/objects/Case_Transfer_Routing__c/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <description>The name of the queue to which this case will be transferred.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the queue to which this case will be transferred.</inlineHelpText>
    <label>Queue Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>