force-app/main/default/objects/Case_Transfer_Routing__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>The name of the record type of the transferred record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the record type of the transferred record.</inlineHelpText>
    <label>Record Type Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>