force-app/main/default/objects/Case_Transfer_Routing__c/fields/Reference_Object_name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Object_name__c</fullName>
    <description>API name of the related Reference Object</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API name of the related Reference Object</inlineHelpText>
    <label>Reference Object name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>