force-app/main/default/objects/Case_Transfer_Routing__c/fields/Sub_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Department_Name__c</fullName>
    <description>The name of the group within the Department.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the group within the Department.</inlineHelpText>
    <label>Sub-Department Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>