force-app/main/default/objects/Case_Transfer_Routing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From_Record_Type_Name__c</columns>
    <columns>From_Profiles__c</columns>
    <columns>Department__c</columns>
    <columns>Sub_Department_Name__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Queue_Name__c</columns>
    <columns>Allow_Transfer_to_User__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>