force-app/main/default/objects/Case_Transfer_Routing__c/listViews/Service_Support_Risk_Management.listView-meta.xml
<ListView>
    <fullName>Service_Support_Risk_Management</fullName>
    <columns>NAME</columns>
    <columns>From_Record_Type_Name__c</columns>
    <columns>Department__c</columns>
    <columns>Sub_Department_Name__c</columns>
    <columns>From_Profiles__c</columns>
    <columns>Record_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>From_Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Service Support Risk Management</value>
    </filters>
    <label>Service Support Risk Management</label>
</ListView>